--- a/package.json
+++ b/package.json
@@ -77,17 +77,19 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.5",
+		"@biomejs/biome": "2.3.4",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
 		"drizzle-kit": "^0.30.5",
+		"lefthook": "^2.0.2",
 		"postcss": "^8.5.3",
 		"shadcn": "^3.5.0",
 		"tailwindcss": "^4.0.15",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.8.2"
+		"typescript": "^5.8.2",
+		"ultracite": "6.3.2"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.40.0"
